Rewrite issue links to GitHub (see #3464)

--- a/tests/cefclient/resources/media_router.html
+++ b/tests/cefclient/resources/media_router.html
@@ -568,7 +568,7 @@ function onUnload() {
       Status information and messages will be displayed in the center of the screen.
       After creating a route you can send messages to the receiver app using the textarea at the bottom of the screen.
       Messages are usually in JSON format with a example of Cast communication to be found
-      <a href="https://bitbucket.org/chromiumembedded/cef/issues/2900/add-mediarouter-support-for-cast-receiver#comment-56680326" target="_blank">here</a>.
+      <a href="https://github.com/chromiumembedded/cef/issues/2900#issuecomment-1465022620" target="_blank">here</a>.
     </p>
   </div>
   <div class="route_controls">
