--- a/libcef/resources/about_version.html
+++ b/libcef/resources/about_version.html
@@ -43,6 +43,10 @@ body {
   content: ':';
 }
 
+.footnote {
+  font-size: 0.8em;
+}
+
 #logo {
   float: right;
   margin-left: 40px;
@@ -109,8 +113,25 @@ body {
           <td class="value">$$MODULEPATH$$</td>
         </tr>
         <tr>
-          <td class="label" valign="top">Cache Path</td>
+          <td class="label" valign="top">Root Cache Path <sup>[1][2]</sup></td>
+          <td class="value">$$ROOTCACHEPATH$$</td>
+        </tr>
+        <tr>
+          <td class="label" valign="top">Cache Path <sup>[1]</sup></td>
           <td class="value">$$CACHEPATH$$</td>
+        </tr>
+        <tr>
+          <td colspan="2" class="footnote">
+            <br>[1] In <a href="https://chromium.googlesource.com/chromium/src/+/master/docs/user_data_dir.md" target="_new">Chromium terminology</a>,
+            "Root Cache Path" (<a href="https://cef-builds.spotifycdn.com/docs/beta.html?structcef__settings__t.html#a2e2be03f34ddd93de90e1cf196757a19" target="_new">CefSettings.root_cache_path</a>)
+            is the "User Data Directory" and "Cache Path" (<a href="https://cef-builds.spotifycdn.com/docs/beta.html?structcef__settings__t.html#ad1644a7eb23cad969181db010f007710" target="_new">CefSettings.cache_path</a>)
+            is the "Profile Path". An empty "Cache Path" value means that the browser is using an <a href="https://support.google.com/chrome/answer/9845881" target="_new">Incognito Profile</a>.
+            Even in Incognito mode, some per-installation data will still be written to the "Root Cache Path" directory.
+            <br/><br/>[2] Chromium's <a href="https://chromium.googlesource.com/chromium/src/+/master/chrome/browser/process_singleton.h#35" target="_new">process singleton lock</a>
+            protects against multiple app instances writing to the same "Root Cache Path" directory.
+            Implement <a href="https://cef-builds.spotifycdn.com/docs/beta.html?classCefBrowserProcessHandler.html#a052a91639483467c0b546d57a05c2f06" target="_new">CefBrowserProcessHandler:: OnAlreadyRunningAppRelaunch</a>
+            to handle the case of app relaunch with the same directory.
+          </td>
         </tr>
       </table>
     </div>
