--- a/tests/cefclient/resources/other_tests.html
+++ b/tests/cefclient/resources/other_tests.html
@@ -41,6 +41,7 @@
 <li><a href="xmlhttprequest">XMLHttpRequest</a></li>
 <li><a href="javascript:window.print();">Print this page with &quot;javascript:window.print();&quot;</a></li>
 <li><a href="https://patrickhlauke.github.io/touch">Touch Feature Tests</a> - requires "touch-events=enabled" flag (and CAPS LOCK on Mac for Trackpad simulation)</li>
+<li><a href="hang">Render process hang test</a></li>
 </ul>
 </body>
 </html>
