Add CefTaskManager API
See https://tests/task_manager example in cefclient.

--- a/tests/cefclient/resources/other_tests.html
+++ b/tests/cefclient/resources/other_tests.html
@@ -28,20 +28,21 @@
 <li><a href="pdf.pdf">PDF Viewer direct</a></li>
 <li><a href="pdf">PDF Viewer iframe</a></li>
 <li><a href="preferences">Preferences</a></li>
+<li><a href="javascript:window.print();">Print this page with &quot;javascript:window.print();&quot;</a></li>
+<li><a href="hang">Render process hang test</a></li>
 <li><a href="http://mrdoob.com/lab/javascript/requestanimationframe/">requestAnimationFrame</a></li>
 <li><a href="response_filter">Response Filtering</a></li>
 <li><a href="client://tests/handler.html">Scheme Handler</a></li>
-<li><a href="server">HTTP/WebSocket Server</a></li>
-<li><a href="websocket">WebSocket Client</a></li>
 <li><a href="https://www.google.com/intl/en/chrome/demos/speech.html">Speech Input</a> - requires "enable-speech-input" flag</li>
+<li><a href="task_manager">Task Manager</a></li>
+<li><a href="https://patrickhlauke.github.io/touch">Touch Feature Tests</a> - requires "touch-events=enabled" flag (and CAPS LOCK on Mac for Trackpad simulation)</li>
 <li><a href="transparency">Transparency</a></li>
 <li><a href="http://webglsamples.org/field/field.html">WebGL</a></li>
 <li><a href="http://apprtc.appspot.com/">WebRTC</a> - requires "enable-media-stream" flag</li>
+<li><a href="server">HTTP/WebSocket Server</a></li>
+<li><a href="websocket">WebSocket Client</a></li>
 <li><a href="urlrequest">CefURLRequest</a></li>
 <li><a href="xmlhttprequest">XMLHttpRequest</a></li>
-<li><a href="javascript:window.print();">Print this page with &quot;javascript:window.print();&quot;</a></li>
-<li><a href="https://patrickhlauke.github.io/touch">Touch Feature Tests</a> - requires "touch-events=enabled" flag (and CAPS LOCK on Mac for Trackpad simulation)</li>
-<li><a href="hang">Render process hang test</a></li>
 </ul>
 </body>
 </html>
