--- a/tests/cefclient/resources/ipc_performance.html
+++ b/tests/cefclient/resources/ipc_performance.html
@@ -8,6 +8,7 @@
       body {
         font-family: Tahoma, Serif;
         font-size: 10pt;
+        background-color: white;
       }
 
       .left {
