Update to Chromium version 138.0.7204.0 (#1465706)
Mac: Require Xcode 16.3 (16E140) and SDK 15.4 (24E241)

--- a/tests/cefclient/resources/config.html
+++ b/tests/cefclient/resources/config.html
@@ -399,6 +399,11 @@
       "LEGACY_COOKIE_SCOPE",
       "ARE_SUSPICIOUS_NOTIFICATIONS_ALLOWLISTED_BY_USER",
       "CONTROLLED_FRAME",
+      "REVOKED_DISRUPTIVE_NOTIFICATION_PERMISSIONS",
+      "LOCAL_NETWORK_ACCESS",
+      "ON_DEVICE_SPEECH_RECOGNITION_LANGUAGES_DOWNLOADED",
+      "INITIALIZED_TRANSLATIONS",
+      "SUSPICIOUS_NOTIFICATION_IDS",
     ];
 
     function getSettingType(index) {
